[tool.poetry]
name = "test-bot-send message"
version = "0.1.0"
description = ""
authors = ["Admin <kuevda002@gmail.com>"]
readme = "README.md"
packages = [{include = "test_bot_send message"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
sqlalchemy = "^2.0.4"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
redis = "^4.5.1"
aioredis = "^2.0.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
